--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <script src="libs/p5.min.js"></script>
     <script src="libs/p5.play.js"></script>
+    <script src="libs/p5.collide2d.js"></script>
     <script src="js/mycircle.js"></script>
     <script src="js/sketch.js"></script>
 
