--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <script src="libs/p5.collide2d.js"></script>
     <script src="js/mycircle.js"></script>
     <script src="js/sketch.js"></script>
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            border: 0;
+            overflow: hidden; /*  Disable scrollbars */
+            display: block;  /* No floating content on sides */
+        }
+    </style>
 
 </head>
 <body>
