--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="libs/p5.play.js"></script>
     <script src="libs/p5.collide2d.js"></script>
     <script src="js/mycircle.js"></script>
+    <script src="js/enemy.js"></script>
     <script src="js/sketch.js"></script>
     <style>
         html, body {
