updated the project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="libs/p5.collide2d.js"></script>
     <script src="js/mycircle.js"></script>
     <script src="js/enemy.js"></script>
+    <script src="js/imageclass.js"></script>
     <script src="js/sketch.js"></script>
     <style>
         html, body {
